docs(api): separated task saving endpoint for annotated jobs
